--- a/data-exploration.ipynb
+++ b/data-exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calc_md5(image_url: str):\n",
-    "    img = Image.open(f\"./data/{image_url}\")\n",
+    "    img = Image.open(f\"./data-collector/data/{image_url}\")\n",
     "    return hashlib.md5(img.tobytes()).hexdigest()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,13 +104,13 @@
        "4  2b186584a1f668972a1b760312263be1  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"./export.csv\")\n",
+    "df = pd.read_csv(\"./data-collector/export.csv\")\n",
     "df[\"md5\"] = df.image_url.apply(calc_md5)\n",
     "df = df.drop_duplicates(subset=[\"md5\"])\n",
     "df.head()"
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -153,11 +153,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"cleaned_metadata.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data conversion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, row in df.iterrows():\n",
+    "    img = Image.open(f\"./data-collector/data/{row.image_url}\").convert(\"RGB\")\n",
+    "    img.save(f\"./data-collector/data/md5/{row.md5}.jpg\", \"jpeg\")"
    ]
   }
  ],
